--- a/Cycle2/2-new_window/new_window_links.html
+++ b/Cycle2/2-new_window/new_window_links.html
@@ -1,36 +1,12 @@
 <html>
 <head>
-<title>Links to various pages</title>
 </head>
 <body>
-<a href="link1.html" 
-target="_blank">
-link1
-</a>
-
-<br /><br />
-
-<a href="link2.html" target="_blank">
-link2
-</a>
-
-<br /><br />
-
-<a href="link3.html" target="_blank">
-link3
-</a>
-
-<br /><br />
-
-<a href="link4.html" target="_blank">
-link4
-</a>
-
-<br /><br />
-
-<a href="link5.html" 
-target="_blank">
-link5
-</a>
+<br><br>
+<a href="https://www.upsc.gov.in/" target="_blank">Union Public Service Commission</a>
+<br><br>
+<a href="http://www.weather.com/" target="_blank">Weather Report</a>
+<br><br>
+<a href="https://github.com/" target="_blank">GitHub</a>
 </body>
 </html>
